app/assets/stylesheets/application.css
/*
 * This is a manifest file that'll be compiled into application.css, which will include all the files
 * listed below.
 *
 * Any CSS and SCSS file within this directory, lib/assets/stylesheets, vendor/assets/stylesheets,
 * or any plugin's vendor/assets/stylesheets directory can be referenced here using a relative path.
 *
 * You're free to add application-wide styles to this file and they'll appear at the bottom of the
 * compiled file so the styles you add here take precedence over styles defined in any styles
 * defined in the other CSS/SCSS files in this directory. It is generally better to create a new
 * file per style scope.
 *
 *= require_tree .
 *= require_self
 */

/*.modal-container {
  border-radius: 10px;
  border: 10px solid white;
}*/

/* reset */
html, body, section, article, h1, h2, p {
   margin: 0;
   border: 0;
   padding: 0;
   font-family: inherit;
   text-align: inherit;
   text-decoration: inherit;
   color: inherit;
   background: transparent;
 }

html, body, button, input, textarea, .button {
  font-family: "Cabin";
  -webkit-font-smoothing: antialiased;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background-color: #fff;
}

button, .button {
  margin: 6px;
  box-sizing: border-box;
  transition: opacity ease-in-out 100ms, color ease-in-out 100ms, background-color ease-in-out 100ms, border-color ease-in-out 100ms;
  border-radius: 3px;
  display: inline-block;
  font-weight: 500;
  outline: 0;
  padding: 3px 7px 4px 7px;
  text-align: center;
  text-decoration: none;
  cursor: pointer;
  font-size: 13px;
  line-height: normal;

  box-shadow: none;
  appearance: none;
  color: #fff;
  background-color: #6f7e90;
  border: 1px solid #6f7e90;
  /*background: #fff;*/
  /*color: #585a61;*/
  /*border: 1px solid #ced1e1;*/
  /*box-shadow: 0 1px 1px 0 rgba(200,200,200,0.2);*/
}

button:hover, .button:hover {
  /*border: 1px solid #a0a6c5;*/
  background: #7d8b9b;
  border: 1px solid #7d8b9b;
}

a {
  text-decoration: none;
  cursor: pointer;
  color: #73B1D6;
}

a:hover {
  text-decoration: underline;
}

h2 {
  font-size: 28px;
  padding: 5px;
  /*border-bottom: 1px solid #ddd;*/
}

h4 {
  font-weight: 400;

  padding: 5px 5px 5px;
  border-bottom: 1px solid #ddd;
}

input, textarea {
  width: 200px;
  padding: 10px 0 11px 14px;

  border: 1px solid #d9d9d9;
  outline: 0;
  background: #fff;
  box-sizing: border-box;
  font-size: 14px;
  line-height: 1.4;
  padding: 3px 8px;
  border-radius: 2px;
  min-height: auto;
  background-color: #d9d9d9;
}

input {
  font-size: 15px;
  overflow-y: hidden;
  height: 29px;
  max-height: 29px;
}

.clearfix:after {
     visibility: hidden;
     display: block;
     font-size: 0;
     content: " ";
     clear: both;
     height: 0;
     }
.clearfix { display: inline-block; }
* html .clearfix { height: 1%; }
.clearfix { display: block; }

.hidden {
  display: none;
}
/* reset */

/* main nav */
header, .modal-container {
  z-index: 10;

  position: fixed;
  top: 0;
  left: 0;

  width: 99%;
  min-width: 515px;

  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 7px 8px 0 8px;

  background-color: #f6f6f6;
  border-top: 2px solid #73B1D6;
  border-bottom: 1px solid #ddd;
  box-shadow: 0 3px 2px -2px rgba(200,200,200,0.2);

  font-weight: 400;
  color: #585a61;
}

.logo a {
  color: #73B1D6;
}

.header-sign-out-button {
  width: auto;
  margin-left: 8px;
}

.blue-text {
  /*color: #4589B0;*/
  color: #91bbd4;
}

.red-button {
  background-color: #e87d7d;
  border: 1px solid #e87d7d;
  color: #fff
}

.red-button:hover {
  background-color: #ec9393;
  border: 1px solid #ec9393;
}

.light-text {
  color:  #b3b3b3;
}

.header-group {
  display: flex;
  align-items: center;
}

.dummy-ask-bar {
  border-right: 0;
  border-top-right-radius: 0;
  border-bottom-right-radius: 0;
  font-weight: 400;
}

.dummy-ask-button {
  float: right;
  padding: 5px 8px 6px 10px;
  margin: 0;
  min-width: 110px;
  border-top-left-radius: 0;
  border-bottom-left-radius: 0;
}

.ask-modal {
  -webkit-font-smoothing: antialiased;
  border-top: 8px solid #73B1D6;
}

.ask-description-container {
  padding-top: 20px;
}

.modal-ask-container {
  width: 50%;
  min-width: 550px;
  margin: auto;
}

.modal-ask-bar {
  width: 80%;
}

.toggle-show-button {
  width: 5%;
  float: right;
  margin: 0;
}

.modal-ask-button {
  width: 20%;
}

.modal-ask-description {
  width: 100%;
  margin-top: 5px;
}
/* main nav */

/* sign-in-up modals */
.sign-in-modal-container {
  margin: auto;
  text-align: center;
  background-color: #f6f6f6;
}

.sign-in-up {
  display: flex;
}

.sign-in-form-container {
  padding: 6px;
  text-align: center;
  background-color: #f6f6f6;
}

.modal-title {
  padding: 5px 5px 5px;
  margin: 30px;
  border-bottom: 1px solid #ddd;
  color: #73B1D6;
}

.errors {
  list-style-type: none;
  color: #73B1D6;
  padding: 0;
}

.empty-input {
  color: gray;
}
/* sign-in-up modals */

/* question index */
.app-children {
  padding-top: 10px;
  display: flex;
  color: #585a61;
}

.topic-list-content {
  position: fixed;
}

.question-index {
  display: flex;
}

@media (max-width: 800px) {
  .app-children, .question-index, header, .modal-container {
    flex-direction: column;
  }
  .app-children, .question-index {
    padding-top: 40px;
  }
  .help-box-content, .topic-list-content {
    position: static;
  }
  .ask-description-container {
    padding-top: 80px;
  }
}

@media only screen
and (min-device-width : 375px)
and (max-device-width : 667px) {
  .app-children, .question-index, header, .modal-container {
    flex-direction: column;
  }
  .app-children, .question-index {
    padding-top: 40px;
  }
  .help-box-content, .topic-list-content {
    position: static;
  }
  .ask-description-container {
    padding-top: 80px;
  }
}

.question-index h3 {
  color: black;
}

.topic-list {
  flex: 1;
  padding: 20px 20px 20px 20px;
  margin: auto;
  margin-top: 0;
}


.feed {
  flex: 3;
  padding: 20px 20px 20px 20px;
  margin: auto;
  margin-top: 0;
}

.help-box {
  flex: 1;
  padding: 20px 20px 20px 20px;
  margin: auto;
  margin-top: 0;
  height: 80px;
}

.help-box-content {
  position: fixed;
}

.help-icon {
  display: inline-block;
  width: 28px;
  height: 28px;
  vertical-align: -10px;

  margin-right: 6px;
}

.help-title {
  display: inline-block;
}
/* question index */

/* question index item */
.question-index-item, .answer-index-item {
  padding: 5px 5px 5px;
  margin: 5px 0 5px 0;
  border-bottom: 1px solid #ddd;
}

.answer-index-item {
  padding-bottom: 16px;
}

.author-icon, .button-icon {
  width: 16px;
  height: 16px;
  margin-right: 6px;
}

.button-icon {
  margin-left: 6px;
  margin-top: 3px;
}
/* question index item */

/* question detail */
.question-detail, .question-edit {
  display: flex;
  padding: 40px 20px 20px 60px;
  /*margin: auto;*/
  margin-top: 0;
  justify-content: flex-start;
}

.related-col-content {
  position: fixed;
}

@media (max-width: 800px) {
  .question-detail, .question-edit {
    flex-direction: column;
    padding: 60px 20px 20px 20px;
  }
  .related-col-content {
    position: static;
  }
}

@media only screen
and (min-device-width : 375px)
and (max-device-width : 667px) {
  .question-detail, .question-edit {
    flex-direction: column;
    padding: 60px 20px 20px 20px;
  }
  .related-col-content {
    position: static;
  }
}

.question-edit {
  text-align: center;
}

.question-edit-input, .answer-create textarea {
  min-width: 500px;
}

.question-col {
  flex: 3;
  padding: 20px 20px 20px 20px;
  /*margin: auto;*/
  min-width: 700px;
  margin-top: 0;
}

.related-col {
  flex: 1;
  padding: 20px 20px 20px 20px;
  margin: auto;
  margin-top: 0;
}

.answer-create {
  padding: 40px 20px 20px 60px;
  margin: auto;
  text-align: center;
}

/* question detail */

